file:///C:/Users/USUARIO/Desktop/Taller%203Web%20(1).pydu prueba

--- a/Index.html
+++ b/Index.html
@@ -2,14 +2,14 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/estilos.css">
 	<link rel="icon" type="image/ico" href="imagenes/icon.ico">
+
 
 	<title>inicio de sesion</title>
 </head>
 
 <body>
-
+<center>
 	<section id="wrap">
 
 	<header>
@@ -37,9 +37,11 @@
 
 					<form method="post" action="action.php">
                      Usuario: <input name="Usuario" type="text" value="Usuario" />
+										 <br>
          </form>
 				 <form method="post" action="action.php">
 										 Contraseña: <input name="Contraseña" type="text" value="Contraseña" />
+										 <p>
 				 </form>
 				 <span style="border-image: initial; border: 2px solid blue;"><a href="lista.html">Ingresar</a></span>
 				 <p>
@@ -49,7 +51,3 @@
 				 <p>
 							 <a href="Integrantes.html">Integrantes</a>
          </p>
-
-
-
-</html>
