--- a/Datos.html
+++ b/Datos.html
@@ -37,6 +37,7 @@
                 <input type="radio" name="sexo" value="3">otro   <input name="otro" type="text" value="" />
                 <p>
                 Incluir mi foto
+                <input type="file" name="imagen">
                 <p>
                 <input type="radio" name="Mujer" value="1">estudiante
                 <p>
